Parte del front terminado

--- a/Android/Guillegram/app/src/main/AndroidManifest.xml
+++ b/Android/Guillegram/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".views.CreateAccountActivity" />
+        <activity
+            android:name=".RefActivity"
+            android:label="@string/title_activity_ref"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
