--- a/Android/Guillegram/app/src/main/AndroidManifest.xml
+++ b/Android/Guillegram/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.CreateAccountActivity" />
+        <activity
+            android:name=".views.CreateAccountActivity"
+            android:parentActivityName=".LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".LoginActivity"></meta-data>
+        </activity>
         <activity
             android:name=".RefActivity"
             android:label="@string/title_activity_ref"
