--- a/Android/Guillegram/app/src/main/AndroidManifest.xml
+++ b/Android/Guillegram/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.ContainerActivity"></activity>
+        <activity
+            android:name=".test"
+            android:label="@string/title_activity_test"></activity>
+        <activity android:name=".views.ContainerActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
