--- a/Android/Guillegram/app/src/main/AndroidManifest.xml
+++ b/Android/Guillegram/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.PictureDetailActivity"></activity>
-        <activity
-            android:name=".test"
-            android:label="@string/title_activity_test" />
+        <activity android:name=".views.PictureDetailActivity"
+            android:parentActivityName=".views.ContainerActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".views.ContainerActivity" />
+        </activity>
         <activity android:name=".views.ContainerActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
