--- a/Android/Guillegram/app/build.gradle
+++ b/Android/Guillegram/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.zoonref:simple-view-behavior:1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 }
