--- a/API/guillegramAPI/src/main/resources/application.properties
+++ b/API/guillegramAPI/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/guillegram
+spring.datasource.username=root
+spring.datasource.password=
