--- a/Android/Guillegram/app/build.gradle
+++ b/Android/Guillegram/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.zoonref:simple-view-behavior:1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 }
